# envelope

./: .gitignore  .travis.yml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  envelope.py  gpggo.py  pyproject.toml  requirements.txt  setup.py  test.py  test_.py  tests.py
.github/workflows/: python-publish.yml  run-unittest.yml
envelope/: __init__.py  __main__.py  _auth.py  address.py  attachment.py  cli.py  constants.py  envelope.py  message.py  parser.py  smtp_handler.py  utils.py
extra/: envelope-autocompletion.bash
tests/: smtp-configuration.ini
tests/eml/: charset.eml  generic.txt  inline_image.eml  internationalized.eml  invalid-characters.eml  invalid-headers.eml  invalid-recipient.eml  mail.eml  multipart-report-xarf.eml  quopri.eml  smime_encrypt.eml  smime_key_cert_together.eml  smime_sign.eml  test_encrypted_gpg.eml  test_encrypted_signed_gpg.eml  test_signed_gpg.eml  utf-header.eml
tests/gpg_keys/: envelope-example-identity-2@example.com.key  envelope-example-identity@example.com.bytes.key  envelope-example-identity@example.com.key
tests/gpg_ring/: pubring.kbx  random_seed  trustdb.gpg
tests/smime/: cert.pem  key-cert-together-passphrase.pem  key-cert-together.pem  key.pem  smime-identity@example.com-cert.pem  smime-identity@example.com-key.pem
tests/smime_chained/: chained_cert.pem  intermediateCA.crt  intermediateCA.key  key-chained-cert-together-passphrase.pem  key-chained-cert-together.pem  rootCA.crt  rootCA.key  signer.crt  signer.key  signer_passphrase.crt  signer_passphrase.key
(+6 files in other folders)
